third_party/move/move-compiler-v2/tests/checking/typing/while_body_invalid.exp

Diagnostics:
error: `integer` not compatible with `()` in constant
  ┌─ tests/checking/typing/while_body_invalid.move:3:22
  │
3 │         while (cond) 0;
  │                      ^

error: expected `()` but found `bool` in expression
  ┌─ tests/checking/typing/while_body_invalid.move:4:22
  │
4 │         while (cond) false;
  │                      ^^^^^

error: expected `()` but found `address` in value
  ┌─ tests/checking/typing/while_body_invalid.move:5:24
  │
5 │         while (cond) { @0x0 };
  │                        ^^^^

error: `integer` not compatible with `()` in name expression
  ┌─ tests/checking/typing/while_body_invalid.move:6:35
  │
6 │         while (cond) { let x = 0; x };
  │                                   ^

error: `integer` not compatible with `()` in constant
  ┌─ tests/checking/typing/while_body_invalid.move:7:34
  │
7 │         while (cond) { if (cond) 1 else 0 };
  │                                  ^

error: `integer` not compatible with `()` in constant
  ┌─ tests/checking/typing/while_body_invalid.move:7:41
  │
7 │         while (cond) { if (cond) 1 else 0 };
  │                                         ^
